--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -32,7 +32,7 @@
     </div>
     <div class="heart-particle-box" align="center">
       <button class="heart-icon likes post-likes" id="heart-icon" data-post-id="{{project.id}}">
-      <i class="fa fa-heart fa-2x"></i></button>
+      <i class="fa fa-heart"></i></button>
       <div class="like_count_blog" id="heart-counter">{{ project.likes }}</div>
     </div>
     <footer class="post-footer">
