--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -123,7 +123,7 @@ img {
 }
 
 .copyright {
-  padding-right: 1em;
+  padding-right: 2em;
   color: #80939d;
 }
 
@@ -572,7 +572,7 @@ a.overlay {
 .post-footer {
   color: #80939d;
   font-size: 0.9em;
-  padding-left: 42%;
+  padding-left: 45%;
   margin-bottom: 3em;
 }
 
@@ -1280,6 +1280,10 @@ available at: https://github.com/nsept/rippleria
 
 /* iphone 4,5,6 */
 @media only screen and (max-width: 384px) {
+  .copyright {
+    padding-right: 1.5em;
+  }
+
   .card-thumb {
     height: 160px;
     overflow: hidden;
