--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -66,6 +66,15 @@
     <script src="{% static 'js/highlight.pack.js' %}"></script>
     <script src="{% static 'js/social.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <!--google-analytics-->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-53782262-2', 'auto');
+  ga('send', 'pageview');
+</script>
     {% endblock %}
   </body>
 </html>
