--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Hello. I am Sujin!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="{% static 'image/background/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'image/background/favicon.jpg' %}">
     <title>Sujin Lee</title>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
