--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -26,10 +26,9 @@
       {% endif %}
     </div>
     <div itemprop="description" class="markdown-body">
-      <div class="post-text_line"></div>
+      <div class="markdown-body">
       {{ project.body|markdown }}
-      <div class="post-text_line"></div>
-    </div>
+      </div>
     <div class="heart-particle-box" align="center">
       <button class="heart-icon likes post-likes" id="heart-icon" data-post-id="{{project.id}}">
       <i class="fa fa-heart"></i></button>
