--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -30,7 +30,7 @@
       {{ project.body|markdown }}
       </div>
     <div class="heart-particle-box" align="center">
-      <button class="heart-icon likes post-likes" id="heart-icon" data-post-id="{{project.id}}">
+      <button class="heart-icon likes post-likes" id="heart-icon" data-project-id="{{project.id}}">
       <i class="fa fa-heart"></i></button>
       <div class="like_count_blog" id="heart-counter">{{ project.likes }}</div>
     </div>
