--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -33,7 +33,7 @@
       <i class="fa fa-heart"></i></button>
       <div class="like_count_blog" id="heart-counter">{{ post.likes }}</div>
     </div>
-    <footer class="post-footer">
+    <footer class="post-footer" align="center">
       <span class="post-comment">
       <i class="fa fa-comment-o"></i>
       <a href="{% url 'post_detail' slug=post.slug %}#disqus_thread"></a></span>
