--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -34,7 +34,7 @@
       <i class="fa fa-heart"></i></button>
       <div class="like_count_blog" id="heart-counter">{{ project.likes }}</div>
     </div>
-    <footer class="post-footer" align="center">
+    <footer class="post-footer">
       <span class="post-comment">
       <i class="fa fa-comment-o"></i>
       <a href="{% url 'post_detail' slug=project.slug %}#disqus_thread"></a></span>
